# DigiTwin

./: .gitignore  CMakeLists.txt  README.md  db.conf  main.cpp
include/: BuildingTable.h  ConfigLoader.h  DataTable.h  SensorDataTable.h  SensorTable.h  StructureTable.h
src/: BuildingTable.cpp  ConfigLoader.cpp  DataTable.cpp  SensorDataTable.cpp  SensorTable.cpp  StructureTable.cpp
